--- a/users/templates/approve_sub.html
+++ b/users/templates/approve_sub.html
@@ -28,7 +28,7 @@
                                               <div class="col-sm-12">
                                                             <div class="form-group">
                                                             <label class="control-label">Discount on system 1 <b style="color:#38b3f5;">(in percentage)</b></label>
-                                                            <input type="text" value='0' class="form-control" name="discount" required>   
+                                                            <input type="number" value='0' max="100" class="form-control" name="discount" required>   
                                                         </div>
                                                 </div>
                                             <div class="col-sm-12">
@@ -42,7 +42,7 @@
                                             <div class="col-sm-12">
                                                             <div class="form-group">
                                                             <label class="control-label">Discount on system 2</label>
-                                                            <input type="text" value='0' class="form-control" name="discount1" required>   
+                                                            <input type="number" max="100" value='0' class="form-control" name="discount1" required>   
                                                         </div>
                                                 </div>
                                       
@@ -79,7 +79,7 @@
                                                 <div class="col-sm-12">
                                                             <div class="form-group">
                                                             <label class="control-label">Installment Period</label>
-                                                            <input type="number"  class="form-control" name="period" required>   
+                                                            <input type="number" min="1"  class="form-control" name="period" required>   
                                                         </div>
                                                 </div>
                                            
