--- a/users/templates/BuyWaterManually.html
+++ b/users/templates/BuyWaterManually.html
@@ -15,7 +15,7 @@
                     
 					<div class="panel">
                                 <div class="panel-heading">
-                                    <h3 class="panel-title">Add new subscription to {{customer_names}}</h3>
+                                    <h3 class="panel-title">Buy water manually</h3>
                                 </div>
                     
                                 <!--Block Styled Form -->
