--- a/users/templates/updatesubs.html
+++ b/users/templates/updatesubs.html
@@ -82,6 +82,13 @@
                                                             <input value={{subscription.InstallmentPeriod}} type="number" min="1"  class="form-control" name="period" required>   
                                                         </div>
                                                 </div>
+
+                                                <div class="col-sm-12">
+                                                    <div class="form-group">
+                                                    <label class="control-label">Subscription date</label>
+                                                    <input type="date" value="{{subscription.From|date:"Y-m-d"}}"  class="form-control" name="from" required>   
+                                                    </div>
+                                                </div>
                                            
                                             
                                             
