--- a/users/templates/add_other_payment.html
+++ b/users/templates/add_other_payment.html
@@ -57,6 +57,13 @@
                                                     <textarea class="form-control" name="description"></textarea> 
                                                 </div>
                                             </div>
+                                            <div class="col-sm-12" style="margin-bottom:20px">
+                                                <select style="width:100%" class="js-example-basic-single" name="Ptype" required>
+                                                    <option value="">Select Payment Type</option> 
+                                                    <option value="Mobile money">Mobile money</option>                                                   
+                                                    <option value="Manual">Manual</option>                                                   
+                                                 </select> 
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="panel-footer text-right">
