--- a/users/templates/add_payment.html
+++ b/users/templates/add_payment.html
@@ -18,14 +18,27 @@
                                         <div class="row">
                                            
                                             
-                                            <h3>Amount</h3>
                                            
 
 
                                             <div class="col-sm-12">
                                                 <div class="form-group">
-                                                    <label for="demo-inline-inputmail" class="sr-only">Amount</label>
+                                                    <label for="demo-inline-inputmail" class="control-label">Amount</label>
                                                     <input type="number" name="amount" min="1000" class="form-control" required>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-sm-12">
+                                                <div class="form-group">
+                                                    <label for="demo-inline-inputmail" class="control-label">Transaction ID</label>
+                                                    <input type="text" name="trans_id"  class="form-control" required>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-sm-12">
+                                                <div class="form-group">
+                                                <label class="control-label">payment date</label>
+                                                <input type="date"   class="form-control" name="payment_date" required>   
                                                 </div>
                                             </div>
 
