--- a/users/templates/approve_sub.html
+++ b/users/templates/approve_sub.html
@@ -65,14 +65,14 @@
                                             <div class="col-sm-12">
                                                             <div class="form-group">
                                                             <label class="control-label">Additional Amount</label>
-                                                            <input type="text" value='0' class="form-control" name="total" required>   
+                                                            <input type="number" value='0' class="form-control" name="total" required>   
                                                         </div>
                                                 </div>
 
                                             <div class="col-sm-12">
                                                             <div class="form-group">
                                                             <label class="control-label">Down payment</label>
-                                                            <input type="text" value='0' class="form-control" name="downpayment" required>   
+                                                            <input type="number" value='0' class="form-control" name="downpayment" required>   
                                                         </div>
                                                 </div>
 
