--- a/users/templates/other_payments.html
+++ b/users/templates/other_payments.html
@@ -39,6 +39,7 @@
                                             <th>Names</th>
                                             <th>Amount</th>
                                             <th>Date</th>
+                                            <th>Payment Type</th>
                                             <th>Description</th>
                                             <th>Action</th>
                                             
@@ -50,6 +51,7 @@
                                             <td>{{payment.CustomerID.FirstName}} {{payment.CustomerID.LastName}}</td>
                                             <td>{{payment.Paidamount|intcomma}} Rwf</td>
                                             <td>{{payment.PaymentDate}}</td>
+                                            <td>{{payment.PaymentType}}</td>
                                             <td>{{payment.Description}}</td>
                                             
 
