--- a/users/templates/update_sub.html
+++ b/users/templates/update_sub.html
@@ -21,7 +21,7 @@
                                                 <div class="col-sm-12">
                                                             <div class="form-group">
                                                             <label class="control-label">Amount</label>
-                                                            <input type="text" value={{subscription.Total}} class="form-control" name="amount" required>   
+                                                            <input type="number" value={{subscription.Total}} class="form-control" name="amount" required>   
                                                         </div>
                                                 </div>
                                                 <div class="col-sm-12">
