--- a/users/templates/Subscriptions.html
+++ b/users/templates/Subscriptions.html
@@ -107,14 +107,23 @@
                                                 {% if sub.Category.Title == "AMAZI" %}
                                                 
                                                 <a class="btn-link" href="{% url 'quotation' sub.id%}"><button class="btn btn-primary"><i class='fa fa-eye'></i></button></a>
+                                                {% if sub.hasPaid %}
+                                                    <span></span>
+                                                {% else %}
                                                 <a class="btn-link" href="{% url 'updatesubs' sub.id%}"><button class="btn btn-dark"><i class='fa fa-pencil'></i></button></a>
+                                                {% endif %}
                                                 <a onclick="return confirm('Are you sure you want to delete this?')" href="{% url 'delete_subscription' sub.id %}">
                                                     <button class="btn btn-danger"><i class='fa fa-trash'></i></button>
                                                     </a>
                                                 {% else %}
 
                                                 <a class="btn-link" href="{% url 'instalment'%}"><button class="btn btn-primary"><i class='fa fa-eye'></i></button></a>
+                                                {% if sub.hasPaid %}
+                                                    <span></span>
+                                                {% else %}
                                                 <a class="btn-link" href="{% url 'update_subscription' sub.id%}"><button class="btn btn-dark"><i class='fa fa-pencil'></i></button></a>
+                                                {% endif %}
+                                                
                                                 <a onclick="return confirm('Are you sure you want to delete this?')" href="{% url 'delete_subscription' sub.id %}">
                                                     <button class="btn btn-danger"><i class='fa fa-trash'></i></button>
                                                     </a>
@@ -134,19 +143,19 @@
                                             {% endif %}
                                             
                                             </td>
+                                             <td> 
                                             {% ifequal sub.TotalBalance 0 %}
-                                             <span></span>
+                                            <span style="font-size:20px">-</span>
                                             {% else %}
-                                            <td> 
+                                           
                                                 <a class="btn-link" href="{% url 'add_payment' sub.id%}">
 
                                                     <button class="btn btn-info">Add Payment</button>
                                                 </a>
                                                 
                                                 
-                                                </td>
                                             {% endifequal %}
-                                           
+                                            </td>
                                     </tr>
                                     {% endfor %}
 
