--- a/users/templates/updatesubs.html
+++ b/users/templates/updatesubs.html
@@ -28,7 +28,7 @@
                                               <div class="col-sm-12">
                                                             <div class="form-group">
                                                             <label class="control-label">Discount on system 1 <b style="color:#38b3f5;">(in percentage)</b></label>
-                                                            <input type="number" value='0' max="100" class="form-control" name="discount" required>   
+                                                            <input type="number" value={{subscription.discount}} max="100" class="form-control" name="discount" required>   
                                                         </div>
                                                 </div>
                                             <div class="col-sm-12">
@@ -42,7 +42,7 @@
                                             <div class="col-sm-12">
                                                             <div class="form-group">
                                                             <label class="control-label">Discount on system 2</label>
-                                                            <input type="number" max="100" value='0' class="form-control" name="discount1" required>   
+                                                            <input type="number" max="100" value={{subscription.discount1}} class="form-control" name="discount1" required>   
                                                         </div>
                                                 </div>
                                       
@@ -65,14 +65,14 @@
                                             <div class="col-sm-12">
                                                             <div class="form-group">
                                                             <label class="control-label">Additional Amount</label>
-                                                            <input  type="text" value='0' class="form-control" name="total" required>   
+                                                            <input  type="number" value='0' class="form-control" name="total" required>   
                                                         </div>
                                                 </div>
 
                                             <div class="col-sm-12">
                                                             <div class="form-group">
                                                             <label class="control-label">Down payment</label>
-                                                            <input type="text" value='0' class="form-control" name="downpayment" required>   
+                                                            <input value={{subscription.Downpayment}} type="number" value='0' class="form-control" name="downpayment" required>   
                                                         </div>
                                                 </div>
 
